Page Overflow fix and Connected Users vh fix

--- a/src/WhiteboardStyles/ConnectedUsersStyles.module.css
+++ b/src/WhiteboardStyles/ConnectedUsersStyles.module.css
@@ -10,7 +10,7 @@
 	margin-left: 20px;
 	padding: 10px;
 	border-radius: 20px;
-	height: 55%;
+	height: 55vh;
 	position: relative;
     overflow-y: scroll; 
 }
