--- a/src/index.css
+++ b/src/index.css
@@ -29,4 +29,5 @@ body {
   /* display: flex;
   justify-content: center;
   align-items: center; */
+  overflow-x: hidden;
 }
